# backend

./: .env  .gitignore  README.md  app.py  create_tables.sql  pyproject.toml
.trae/rules/: project_rules.md
alembic/: env.py
alembic/versions/: 1b0eaceeb196_重构lens模型_引入基础模型lensbase.py  319a8e16f354_add_age_column_to_user_table.py  338706198da6_重构comment模型_引入基础模型commentbase.py  5a037180ef91_重构mount模型_引入基础模型mountbase.py  5b473cbf8f9c_实现镜头卡口多对多_修复.py  5d8e350ad71d_重构category模型_引入基础模型categorybase.py  5fb0bea357be_实现镜头卡口多对多_修复.py  5fd86aff472c_add_rating_fields_to_camera_and_lens.py  6e5391d1a5d3_重构user模型_引入基础模型userbase.py  6f1e5c25ad39_test_migration.py  733a7af482c2_重构camera模型_引入基础模型camerabase.py  78f21f9197ba_实现镜头卡口多对多_修复.py  7def2039519f_实现镜头卡口多对多.py  9bfa6cbc188a_重构brand模型_引入基础模型brandbase.py  c15665dd67fd_实现镜头卡口多对多_修复.py  d3f45d0b3a0b_添加品牌卡口多对多表.py  e771c5968920_多对多最后一次修改.py  ede388c7639f_重构rating模型_引入基础模型ratingbase.py  eee83992cf7d_add_article_comment_models_with_text_.py  f9a0c4ccce3d_添加lens_mount_link表.py  fa44d2a8b00c_重构tag模型_引入基础模型tagbase.py
api/: article.py  brand.py  camera.py  category.py  comment.py  lens.py  mount.py  rating.py  tag.py  user.py
auth/: auth.py
database/: brand.sql  camera.sql  config.py  lens.sql  mount.sql  user.sql
models/: __init__.py  article.py  article_tag_link.py  base.py  brand.py  brand_mount_link.py  camera.py  category.py  comment.py  lens.py  lens_mount_link.py  mount.py  rating.py  tag.py  user.py
schemas/: brand.py  camera.py  lens.py  mount.py  user.py
