[project]
name = "backend"
version = "0.1.0"
description = "Backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
